5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1590_2894.log
== TEST (2019-03-20 14:59:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input(mod(abs(x))))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 8
    total = ?????
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 14:59:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input(mod(abs(x))))

# Calculo do valor a ser pago, incluindo o frete:
total = print

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 11
    print(?????)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:00:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input(mod(abs(x))))

# Calculo do valor a ser pago, incluindo o frete:
total = print

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = float(input(mod(abs(x))))
NameError: name 'mod' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:00:23) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input((abs(x))))

# Calculo do valor a ser pago, incluindo o frete:
total = print

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = float(input((abs(x))))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:00:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input((abs(x)))

# Calculo do valor a ser pago, incluindo o frete:
total = print

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = print
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:01:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input((abs(x)))

# Calculo do valor a ser pago, incluindo o frete:
total = float(input(abs(X)))

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = float(input(abs(X)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:01:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input((abs(x)))

# Calculo do valor a ser pago, incluindo o frete:
total = mod = abs(X)

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = mod = abs(X)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:02:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input((abs(x)))

# Calculo do valor a ser pago, incluindo o frete:
total = ("mod" = abs(X))

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = ("mod" = abs(X))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:03:53) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input((abs(8)))

# Calculo do valor a ser pago, incluindo o frete:
total = (float(input(abs(8)))

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = (float(input(abs(8)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:04:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input((abs(8)))

# Calculo do valor a ser pago, incluindo o frete:
total = (float(input(abs(8)))

# Impressao do valor total:
print(float)
-- ERROR:
File "XXXX", line 8
    total = (float(input(abs(8)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:05:13) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = var =input((abs(8)))

# Calculo do valor a ser pago, incluindo o frete:
total = var = input(abs(8))

# Impressao do valor total:
print =(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = var = input(abs(8))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:05:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = var =input((abs(8)))

# Calculo do valor a ser pago, incluindo o frete:
total = var = input(abs(8))

# Impressao do valor total:
print =(var)
-- EXECUTION TIME:
0.136973
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2894/main.py", line 8, in <module>
    total = var = input(abs(8))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:05:44) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = var =input((abs(8)))

# Calculo do valor a ser pago, incluindo o frete:
total = int = input(abs(8))

# Impressao do valor total:
print =(int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = int = input(abs(8))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:05:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = var =input((abs(8)))

# Calculo do valor a ser pago, incluindo o frete:
total = int = input(abs(8))

# Impressao do valor total:
print =(int)
-- EXECUTION TIME:
0.130976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2894/main.py", line 8, in <module>
    total = int = input(abs(8))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:06:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = var =input((abs(8) + 45))

# Calculo do valor a ser pago, incluindo o frete:
total = int = input(abs(8) + 45)

# Impressao do valor total:
print =(int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = int = input(abs(8) + 45)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:06:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = var =input((abs(8) + 45))

# Calculo do valor a ser pago, incluindo o frete:
total = int = input(abs(8) + 45)

# Impressao do valor total:
print =(int)
-- EXECUTION TIME:
0.150868
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2894/main.py", line 8, in <module>
    total = int = input(abs(8) + 45)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:07:06) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = var =input((mod = abs(8) + 45))

# Calculo do valor a ser pago, incluindo o frete:
total = int = input(abs(8) + 45)

# Impressao do valor total:
print =(int)
-- ERROR:
File "XXXX", line 5
    print = var =input((mod = abs(8) + 45))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:07:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = input((mod = abs(8) + 45))

# Calculo do valor a ser pago, incluindo o frete:
total = int = input(abs(8) + 45)

# Impressao do valor total:
print =(int)
-- ERROR:
File "XXXX", line 5
    print = input((mod = abs(8) + 45))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:07:41) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = input(("mod" = abs(8) + 45))

# Calculo do valor a ser pago, incluindo o frete:
total = int = input(abs(8) + 45)

# Impressao do valor total:
print =(int)
-- ERROR:
File "XXXX", line 5
    print = input(("mod" = abs(8) + 45))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:21:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = floatt(imput ("oito vezes oito mais quarenta e cinco")

# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print = (?????)
-- ERROR:
File "XXXX", line 8
    total = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:21:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(imput ("oito vezes oito mais quarenta e cinco")

# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print = (?????)
-- ERROR:
File "XXXX", line 8
    total = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:22:05) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(imput ("oito vezes x mais quarenta e cinco")

# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print = (?????)
-- ERROR:
File "XXXX", line 8
    total = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:25:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
valor = float(imput ("qual o valor unitario do jogo")

# Calculo do valor a ser pago, incluindo o frete:
total = 8 * valor + 45

# Impressao do valor total:
print = (total)
-- ERROR:
File "XXXX", line 8
    total = 8 * valor + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:25:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
valor = float(imput ("qual o valor unitario do jogo")

# Calculo do valor a ser pago, incluindo o frete:
total = 8 * valor + 45

# Impressao do valor total:
print = (total)
-- ERROR:
File "XXXX", line 8
    total = 8 * valor + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:19) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
valor = float(imput (("qual o valor unitario do jogo"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8 * valor + 45

# Impressao do valor total:
print = (total)
-- ERROR:
File "XXXX", line 8
    total = 8 * valor + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:46) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
valor = float(imput = (("qual o valor unitario do jogo"))

# Calculo do valor a ser pago, incluindo o frete:
total = (8 * valor) + 45

# Impressao do valor total:
print = (total)
-- ERROR:
File "XXXX", line 8
    total = (8 * valor) + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:26:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
valor = float(imput = (("qual o valor unitario do jogo"))

# Calculo do valor a ser pago, incluindo o frete:
total = (8 * valor) + 45

# Impressao do valor total:
print = (total)
-- EXECUTION TIME:
0.124843
-- ERROR:
  File "/home/codebench/codes/1590/2894/main.py", line 8
    total = (8 * valor) + 45
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:27:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
valor = float(imput("qual o valor unitario do jogo")

# Calculo do valor a ser pago, incluindo o frete:
total = (8 * valor) + 45

# Impressao do valor total:
print = (total)
-- ERROR:
File "XXXX", line 8
    total = (8 * valor) + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:27:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
valor = float(imput("qual o valor unitario do jogo")

# Calculo do valor a ser pago, incluindo o frete:
total = (8 * valor) + 45

# Impressao do valor total:
print = (total)
-- EXECUTION TIME:
0.138941
-- ERROR:
  File "/home/codebench/codes/1590/2894/main.py", line 8
    total = (8 * valor) + 45
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:27:44) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
valor = float(imput("qual o valor unitario do jogo")

# Calculo do valor a ser pago, incluindo o frete:
total = (8 * valor) + 45

# Impressao do valor total:
print = (total)
-- ERROR:
File "XXXX", line 8
    total = (8 * valor) + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:28:04) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
valor = float(imput("qual o valor unitario do jogo")

# Calculo do valor a ser pago, incluindo o frete:
total = (8 * valor) + 45

# Impressao do valor total:
print = ("total")
-- ERROR:
File "XXXX", line 8
    total = (8 * valor) + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:28:30) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
valor = float(imput("qual o valor unitario do jogo")

# Calculo do valor a ser pago, incluindo o frete:
total = (8 * valor) + 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = (8 * valor) + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:28:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
valor = float(imput("qual o valor unitario do jogo")

# Calculo do valor a ser pago, incluindo o frete:
total = (8 * valor) + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.123235
-- ERROR:
  File "/home/codebench/codes/1590/2894/main.py", line 8
    total = (8 * valor) + 45
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:28:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
valor = float(imput("qual o valor unitario do jogo"))

# Calculo do valor a ser pago, incluindo o frete:
total = (8 * valor) + 45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor = float(imput("qual o valor unitario do jogo"))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:29:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
valor = float(imput("qual o valor unitario do jogo"))

# Calculo do valor a ser pago, incluindo o frete:
total = (8 * valor) + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.132593
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2894/main.py", line 5, in <module>
    valor = float(imput("qual o valor unitario do jogo"))
NameError: name 'imput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:29:24) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
valor = float(input("qual o valor unitario do jogo"))

# Calculo do valor a ser pago, incluindo o frete:
total = (8 * valor) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:29:28) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
valor = float(input("qual o valor unitario do jogo"))

# Calculo do valor a ser pago, incluindo o frete:
total = (8 * valor) + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.149629
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:56:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
x = input(float("qual o valor unitario do jogo?"))
print(float(8*x+45))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = input(float("qual o valor unitario do jogo?"))
ValueError: could not convert string to float: 'qual o valor unitario do jogo?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:56:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
x = input(float("qual o valor unitario do jogo?")
print(float(8*x+45))
-- ERROR:
File "XXXX", line 6
    print(float(8*x+45))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:57:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
x = input(float("qual o valor unitario do jogo?")
print(8*x+45)
-- ERROR:
File "XXXX", line 6
    print(8*x+45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:57:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = input(float("qual o valor unitario do jogo?")
print(8*jogo+45)
-- ERROR:
File "XXXX", line 6
    print(8*jogo+45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:57:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = input(float("qual o valor unitario do jogo?")
print(float(8*jogo+45))
-- ERROR:
File "XXXX", line 6
    print(float(8*jogo+45))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:58:04) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = input(float("qual o valor unitario do jogo?")

print(float(8*jogo+45))
-- ERROR:
File "XXXX", line 7
    print(float(8*jogo+45))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:59:03) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = input(float("qual o valor unitario do jogo?")

print(float(8*jogo+45))
-- ERROR:
File "XXXX", line 7
    print(float(8*jogo+45))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:59:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = input(float("qual o valor unitario do jogo?")

print(float(8 * jogo+45))
-- ERROR:
File "XXXX", line 7
    print(float(8 * jogo+45))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:00:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = input(float("qual o valor unitario do jogo?")
total = 8*jogo + 45
print(total)
-- ERROR:
File "XXXX", line 6
    total = 8*jogo + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:00:29) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = input(float("qual o valor unitario do jogo?")
total = 8*jogo + 45
print(total)
-- ERROR:
File "XXXX", line 6
    total = 8*jogo + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:01:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = input(float("qual o valor unitario do jogo?"))
total = (8*jogo) + 45
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    jogo = input(float("qual o valor unitario do jogo?"))
ValueError: could not convert string to float: 'qual o valor unitario do jogo?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:01:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
jogo = input(float("qual o valor unitario do jogo??"))
total = (8*jogo) + 45
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    jogo = input(float("qual o valor unitario do jogo??"))
ValueError: could not convert string to float: 'qual o valor unitario do jogo??'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:02:27) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
x = input(float("qual o valor unitario do jogo?"))
total = float((8*x) + 45)
print(float(total))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = input(float("qual o valor unitario do jogo?"))
ValueError: could not convert string to float: 'qual o valor unitario do jogo?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:02:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
x = input(float("qual o valor unitario do jogo?"))
total = float((8*x) + 45)
print(float(total))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = input(float("qual o valor unitario do jogo?"))
ValueError: could not convert string to float: 'qual o valor unitario do jogo?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:02:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
x = input(float("qual o valor unitario do jogo?"))
total = float((8*x) + 45)
print(float(total))
-- EXECUTION TIME:
0.165076
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2894/main.py", line 5, in <module>
    x = input(float("qual o valor unitario do jogo?"))
ValueError: could not convert string to float: 'qual o valor unitario do jogo?'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:03:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
x = input("qual o valor unitario do jogo?")
total = float(8 * x) + 45
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = float(8 * x) + 45
ValueError: could not convert string to float: '1.231.231.231.231.231.231.231.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:04:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
x = input(float("qual o valor unitario do jogo?")
total = float(8 * x) + 45
print(total)
-- ERROR:
File "XXXX", line 6
    total = float(8 * x) + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:04:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
x = input(float("qual o valor unitario do jogo?")
total = (8 * x) + 45
print(total)
-- ERROR:
File "XXXX", line 6
    total = (8 * x) + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:04:45) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
x = input(float("qual o valor unitario do jogo?")
total = 8 * x + 45
print(total)
-- ERROR:
File "XXXX", line 6
    total = 8 * x + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:04:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
x = input("qual o valor unitario do jogo?")
total = 8 * x + 45
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = 8 * x + 45
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:05:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
x = input("qual o valor unitario do jogo?")
total = float(8 * x + 45)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = float(8 * x + 45)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:06:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
var = input(float"qual o valor unitario do jogo?")
print(8*var + 45)
-- ERROR:
File "XXXX", line 5
    var = input(float"qual o valor unitario do jogo?")
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:07:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
var = input(float("qual o valor unitario do jogo?")
print(8*var + 45)
-- ERROR:
File "XXXX", line 6
    print(8*var + 45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:07:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
var = input(float("qual o valor unitario do jogo?")
print(8*var + 45)
-- ERROR:
File "XXXX", line 6
    print(8*var + 45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:08:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
var = input(float("qual o valor unitario do jogo?")
print = (8*var + 45)
-- ERROR:
File "XXXX", line 6
    print = (8*var + 45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:09:44) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
var = input(float("qual o valor unitario do jogo?")

-- ERROR:
File "XXXX", line 6
    
                                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:09:50) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
var = input(float("qual o valor unitario do jogo?")

-- ERROR:
File "XXXX", line 6
    
                                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:09:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
var = input(float("qual o valor unitario do jogo?")
-- ERROR:
File "XXXX", line 6
    
                                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:10:49) 
-- CODE:
x = input(float("qual o valor unitario do jogo?"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = input(float("qual o valor unitario do jogo?"))
ValueError: could not convert string to float: 'qual o valor unitario do jogo?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:11:02) 
-- CODE:
x = input(float("qual o valor unitario?"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = input(float("qual o valor unitario?"))
ValueError: could not convert string to float: 'qual o valor unitario?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:11:23) 
-- CODE:
x = input(float("qual e o valor unitario?"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = input(float("qual e o valor unitario?"))
ValueError: could not convert string to float: 'qual e o valor unitario?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:11:49) 
-- CODE:
x = input(float("qual e o valor do jogo?"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = input(float("qual e o valor do jogo?"))
ValueError: could not convert string to float: 'qual e o valor do jogo?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:11:56) 
-- CODE:
x = input(float("qual o valor do jogo?"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = input(float("qual o valor do jogo?"))
ValueError: could not convert string to float: 'qual o valor do jogo?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:12:57) 
-- CODE:
x = input("qual o valor do jogo?")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = input(float("qual o valor do jogo?"))
ValueError: could not convert string to float: 'qual o valor do jogo?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:13:24) 
-- CODE:
x = input("qual o valor do jogo?")
total = 8*x+45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = 8*x+45
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:13:40) 
-- CODE:
x = input("qual o valor do jogo?")
total = float(8*x+45)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = float(8*x+45)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:13:42) 
-- CODE:
x = input("qual o valor do jogo?")
total = float(8*x+45)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = float(8*x+45)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:14:00) 
-- CODE:
x = input("qual o valor do jogo?")
total = 8 * x + 45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = 8 * x + 45
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:14:24) 
-- CODE:
x = input("qual o valor do jogo?")
print(x)
-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:14:42) 
-- CODE:
x = input("qual o valor do jogo?")
print(8 * x + 45)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(8 * x + 45)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:15:26) 
-- CODE:
x = input("instrucoes: qual o valor unitario?")
print(8 * x + 45)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(8 * x + 45)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:16:38) 
-- CODE:
x = input("qual o valor unitario?")

print(8 * x + 45)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(8 * x + 45)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:17:06) 
-- CODE:
x = input(float("qual o valor unitario?"))

print(8 * x + 45)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = input(float("qual o valor unitario?"))
ValueError: could not convert string to float: 'qual o valor unitario?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:19:40) 
-- CODE:
x = float(input("qual o valor unitario?"))

print(8 * x + 45)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:19:46) 
-- CODE:
x = float(input("qual o valor unitario?"))

print(8 * x + 45)
-- EXECUTION TIME:
0.199361
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
